--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,1 +1,4 @@
-<h1>TESTE APP COMPONENT<span class="badge bg-secondary">FUNCIONANDO</span> </h1>
+<app-header></app-header>
+<div style="padding: 2%;">
+    <router-outlet></router-outlet>
+</div>
