--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -8,7 +8,7 @@
                 Teste Front-End Angular Squadra
             </h1>
         </div>
-        <div class="d-flex">
+        <div class="d-flex" (click)="teste()">
             <img src="assets/img/cart-fill.svg" width="32px">
         </div>
     </div>
