--- a/frontend/src/app/components/carrossel/carrossel.component.html
+++ b/frontend/src/app/components/carrossel/carrossel.component.html
@@ -4,10 +4,12 @@
             <app-card [ngDataSource]="item"></app-card>
         </div>
     </ngu-tile>
-    <button NguCarouselNext class="controle btn btn-secondary-light btn-lg" style="right: 0;">
+    <button *ngIf="ngDataSource.length > 4" NguCarouselNext class="controle btn btn-primary-light btn-lg"
+        style="right: 0;">
         <img src="assets/img/arrow-right.svg">
     </button>
-    <button NguCarouselPrev class="controle btn btn-secondary-light btn-lg" style="left: 0;">
+    <button *ngIf="ngDataSource.length > 4" NguCarouselPrev class="controle btn btn-primary-light btn-lg"
+        style="left: 0;">
         <img src="assets/img/arrow-left.svg">
     </button>
 </ngu-carousel>
