--- a/frontend/src/app/views/home/home.component.html
+++ b/frontend/src/app/views/home/home.component.html
@@ -1,14 +1,14 @@
 <section>
     <h2>Hoteis</h2>
-    <app-carrossel></app-carrossel>
+    <app-carrossel [ngDataSource]="ofertasHoteis"></app-carrossel>
 </section>
 <br />
 <section>
     <h2>Gastronomia</h2>
-    <app-carrossel></app-carrossel>
+    <app-carrossel [ngDataSource]="ofertasGastronomia"></app-carrossel>
 </section>
 <br />
 <section>
     <h2>Entretenimento</h2>
-    <app-carrossel></app-carrossel>
+    <app-carrossel [ngDataSource]="ofertasEntretenimento"></app-carrossel>
 </section>
