feat (tela checkout) Adicionado tela checkout
- Adicionado a tela de checkout da oferta

--- a/frontend/src/app/components/carrossel-imagens/carrossel-imagens.component.html
+++ b/frontend/src/app/components/carrossel-imagens/carrossel-imagens.component.html
@@ -13,11 +13,11 @@
             <img src="assets/img/arrow-left.svg">
         </button>
 
-        <ul class="ponto" NguCarouselPoint>
+        <!-- <ul class="ponto" NguCarouselPoint>
             <li *ngFor="let ponto of carrosel.pointNumbers; let i = index" [class.active]="i == carrosel.activePoint"
                 (click)="carrosel.moveTo(i)">
             </li>
-        </ul>
+        </ul> -->
 
     </ngu-carousel>
 </section>
